# flashcard-app

./: .env.test  .gitignore  README.md  eslint.config.ts  feat.md  features.md  index.html  manifest.json  new.md  notes.txt  package-lock.json  package.json  production-ready.md  prompt.md  requirements.txt  user-stories.json  vercel.json  vite.config.ts  vitest.config.ts
.agents/rules/: bun usage.md  guidelines.md  ui components.md
.docs/: production-ready.md  vercel-docs.llms.md
.gemini/: implementation_plan.md  knowledge.md  prd.md  settings.json  task.md  walkthrough.md
api/: README.md  app.py  backend.logs  index.py  pyproject.toml
api/modules/: ai.py  auth.py  exceptions.py  guardian.py  rate_limit.py  schema_parser.py  toon_formatter.py  vision_engine.py
api/routes/: generate.py  health.py
api/services/: generation.py
api/tests/: __init__.py  conftest.py  helpers.py  test_exceptions.py  test_llm_abstraction.py  test_security_and_health.py
backend/: main.py  requirements.txt
backend/modules/: toon_formatter.py
figma/: README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src/__tests__/: DashboardView.spec.ts  DeckManager.spec.ts  StudySession.spec.ts  supabase_mock.ts
src/components/: BottomNav.vue  CardRenderer.vue  ImageOcclusionDialog.vue  ImageOcclusionEditor.vue  ImageOcclusionViewerDialog.vue  NavigationDrawer.vue  OcclusionCardViewer.vue  OcclusionColorPicker.vue  ShareDeckDialog.vue  Toast.vue  UndoRedoControls.vue
src/composables/: useAgent.ts  useCanvasZoomPan.ts  (+8 more)
supabase/: README.md  config.toml
(+58 files in other folders)
